--- a/exercise_3/src/styles/main.scss
+++ b/exercise_3/src/styles/main.scss
@@ -1,5 +1,7 @@
+@import "./_reset.scss";
+
 body {
-    height: 97vh;
+  height: 97vh;
 }
 
 .container {
@@ -7,7 +9,7 @@ body {
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
- }
+}
 
 header {
   display: flex;
@@ -20,8 +22,8 @@ nav {
   display: flex;
   justify-content: space-between;
   font-size: small;
-  font-family: 'Courier New', Courier, monospace;
-  
+  font-family: "Courier New", Courier, monospace;
+
   a {
     width: 100%;
     text-align: center;
@@ -36,11 +38,11 @@ a {
 }
 
 @media (max-width: 650px) {
-    .lemoncode {
-        visibility: hidden;
-    }
+  .lemoncode {
+    visibility: hidden;
+  }
 
-    .container {
-        justify-content: space-between;
-    }
+  .container {
+    justify-content: space-between;
+  }
 }
